--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,12 @@
-body {}
-
 /*GENERAL */
 .cover,
-.footer{padding: 0 50px;}    
-
+.footer {
+    padding: 0 50px;
+}
 
 li {
     list-style: none;
 }
-
 
 /*HEADER*/
 .header {
@@ -17,7 +15,6 @@ li {
     grid-template-columns: 1fr min-content 1fr;
     grid-template-rows: auto;
     align-items: center;
-   
     gap: 36px;
 }
 
@@ -26,75 +23,51 @@ li {
     height: 105px;
 }
 
-address,
 .menu {
-   font-family: Raleway;
-font-weight: 400;
-font-style:normal;
-font-size: 18px;
-
-line-height: 100%;
-letter-spacing: 0%;
-
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;   
+    line-height: 22px;
+    font-style: normal;
 }
-.address p{
+
+address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;   
     line-height: 24px;
+    font-style: normal;
 }
 
+.header__link_active a {
+    text-decoration: none;
+}
 
 .header-menu li:nth-child(2) {
-    list-style-type: "◦";
+    list-style-type: circle;
 }
 
 .header-menu li:nth-child(3) {
-    list-style-type: "◦";
+    list-style-type: circle;
 }
 
 .header-menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .header-address {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: last baseline;
-    margin-right: 38px;
-
-}
-
-/*FOOTER*/
-.footer {
-    padding: 180px 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items:flex-start;
-    gap: 150px;
-    height: 180px;
-    
-}
-.menu-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-
-.footer-socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 48px;
+    margin-right: 5px;
 }
 
 /*COVER*/
-
-
 .cover {
     position: relative;
     width: 100%;
@@ -102,233 +75,248 @@ letter-spacing: 0%;
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-position: center;
-
+    z-index: 1;
 }
+
 .cover::before {
     content: "";
     position: absolute;
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
 }
 
-h1 {
-
+.overlay {
     position: relative;
-    font-family: Raleway;
+    z-index: 3;
+}
+
+.cover__title {
+    font-family: Raleway, sans-serif;
     font-weight: 700;
-    font-style: Bold;
     font-size: 100px;
-    line-height: 120px;
+    line-height: 130px;
     letter-spacing: 30px;
     text-transform: uppercase;
     color: white;
-
+    display: flex;
+    flex-direction: column;
+    padding-top: 160px;
+    gap: 5px;
 }
 
-h1 span:nth-child(1) {
-    position: absolute;
-    top: 165px;
+.aligned-text {
+    display: inline-block;
+    width: 100%;
 }
 
-h1 span:nth-child(2) {
-    position: absolute;
-    left: 331px;
-    top: 300px;
+.aligned-text_left {
+    text-align: left;
 }
 
-h1 span:nth-child(3) {
-    position: absolute;
-    left: 613px;
-    top: 435px;
+.aligned-text_center {
+    text-align: center;
+    padding-left: 32px;
+}
+
+.aligned-text_right {
+    text-align: right;
+    padding-left: 613px;
 }
 
 .description {
-    min-width:1000px;
+    padding-top: 110px;
+    min-width: 1000px;
     color: white;
-    position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    bottom: 58px;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-weight: 400;
-    font-style: Regular;
     font-size: 22px;
     line-height: 28px;
-    text-transform: uppercase;       
+    text-transform: uppercase;
 }
 
-.subline{
+.subline {
     word-spacing: 18.5px;
-    
 }
-p .bet{
+
+p .bet {
     text-decoration: none;
     border: 3px white solid;
     padding: 10px 30px;
     line-height: 1;
-    
 }
+
 /*LOTS*/
 .lots {
-    padding: 189px 24px 0 24px;
+    padding: 187px 24px 0 24px;
 }
-.title{
-    font-family: Raleway , sans-serif;
-font-weight: 700;
-font-style: Bold;
-font-size: 40px;
 
-line-height: 100%;
-letter-spacing: 0%;
-text-transform: uppercase;
-
-
+.title {
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 100%;    
+    text-transform: uppercase;
 }
-.lots__look-more-link{
+
+.lots__look-more-link {
     display: inline-block;
     padding-left: 40px;
     padding-top: 30px;
     font-size: 20px;
     line-height: 1.3;
-    
 }
-.title__lots{
+
+.title__lots {
     padding-left: 40px;
-    padding-bottom: 27px ;
+    padding-bottom: 27px;
 }
-.lots__card-list{
+
+.lots__card-list {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     gap: 25px;
-    
- }
+}
+
 .card {
     /*1100px - (2x25px gap) - (2x24px padding) */
- flex-grow: 0;
-  flex-shrink: 1;
-  
-  flex-basis: 334px;
-  
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 334px;
 }
 
 .lots__card-list-item {
     display: flex;
     flex-direction: column;
 }
-.lots__card-list-item li {
-    align-self: flex-end;
-}
-.card{ 
-    position:relative;   
+
+.card {
+    position: relative;
     background-size: cover;
     background-position: center;
-    min-height: 596px;  
-    z-index: -2;
+    min-height: 596px;
+    z-index: 1;
 }
-.card:nth-child(1) {
+
+.card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+}
+
+.card_type_film {
     background-image: url(../images/card-lot-01.jpg);
-   }
-   .card::before {
-       content: "";
-       position: absolute;
-       inset: 0;
-       width: 100%;
-       height: 100%;
-       background-color: rgba(0, 0, 0, 0.5);
-       z-index: -1;
-   }
+}
 
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
 
-.card:nth-child(2) {
-       background-image: url(../images/card-lot-02.jpg);
-   }
-.card:nth-child(3) {   
+.card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
-   }
-.lots__card-list-item{
+}
+
+.lots__card-list-item {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
     padding: 48px 40px;
-    
-    
 }
+
 .lots__card-list-item .card-link {
     font-family: Raleway, sans-serif;
     font-weight: 700;
-    font-style: Bold;
     font-size: 22px;
     line-height: 120%;
     color: white;
     text-transform: uppercase;
-    
 }
-.lots__card-list-item li {
+
+.lots__card-list-item p {
     font-family: Raleway, sans-serif;
     font-weight: 400;
-    font-style: Regular;
     font-size: 20px;
     line-height: 120%;
     color: white;
 }
+
 /*ABOUT*/
-.about {  
+.about {
     padding: 120px 24px 0 24px;
     width: 100%;
-   
-   
     display: grid;
-    grid-template-columns: 1fr  2fr;
+    grid-template-columns: 1fr 2fr;
     grid-template-rows: auto;
     gap: 10px;
 }
+
 .about__logo {
-    position: relative;
-    top: 35px;
-    left: 47px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: black;
     width: 240px;
     height: 240px;
-    border-radius: 50%;  
-    
+    border-radius: 50%;
+    margin-left: 47px;
+    margin-top: 34px;
 }
+
 .about__logo-image {
     width: 142px;
     height: 112px;
 }
-.about__text-container{
+
+.about__text-container {
     padding-top: 135px;
-    
-     
-    
 }
-.about__p-container{
+
+.about__p-container {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
+
 .about__title {
     padding-bottom: 106px;
 }
-.text{
-    font-family: Raleway;
-font-weight: 400;
-font-style: Regular;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 0%;
 
+.text {
+    font-family: Raleway, sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;    
 }
 
+/*FOOTER*/
+.footer {
+    padding: 180px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 150px;
+}
 
+.menu-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-
-
-
+.footer-socials {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+}
