--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,8 @@ li {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    z-index: 0;
+    pointer-events: none;
 }
 
 .menu {
@@ -78,18 +79,13 @@ address {
     background-image: url(../images/cover.jpg);
     background-size: cover;
     background-position: center;
-}
-
-.cover-content {
-    padding: 165px 50px 60px 50px;
-    min-width: 100%;
-    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .cover__title {
+    padding: 165px 50px 0 50px;
     font-family: Raleway, sans-serif;
     font-weight: 700;
     letter-spacing: 30px;
@@ -100,6 +96,8 @@ address {
     gap: 20px;
     font-size: 100px;
     line-height: 1.15;
+    position: relative;
+    z-index: 1;
 }
 
 .aligned-text_center {
@@ -113,6 +111,7 @@ address {
 }
 
 .description {
+    padding: 0 50px 60px 50px;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -122,6 +121,8 @@ address {
     font-size: 22px;
     line-height: 28px;
     text-transform: uppercase;
+    position: relative;
+    z-index: 1;
 }
 
 .subline {
@@ -167,18 +168,21 @@ address {
 }
 
 .card {
+    position: relative;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 596px;
+    height: 596px;
 }
 
 .card_content {
     padding: 48px 40px;
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    min-height: 100%;
 }
 
 .card_type_film {
@@ -270,7 +274,6 @@ address {
     justify-content: space-between;
     align-items: flex-start;
     gap: 150px;
-
 }
 
 .menu-footer {
